# Revise

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
env/: .env.development  .env.production
src/: App.scss  App.ts  App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Extra/Configs/: Development.json  Production.json
src-tauri/Extra/Scripts/Application/: Custom.js
src-tauri/Extra/Scripts/Revise/: Custom.js
src-tauri/Extra/Scripts/Tray/: Custom.js
src-tauri/src/: main.rs
src-tauri/src/Addon/: Automatic.rs  Image.rs  Monitor.rs  Serve.rs  Wallpaper.rs  Widget.rs  Window.rs  mod.rs
src-tauri/src/Extra/: App.rs  Serve.rs  Setup.rs  Singleton.rs  Tray.rs  Window.rs  mod.rs
src/common/HeaderBar/: HeaderBar.scss  HeaderBar.ts  HeaderBar.vue
src/common/Transformable/: Transformable.scss  Transformable.ts  Transformable.vue
src/decorators/: DR.ts
src/libs/: AActor.ts  EventSystem.ts  Mathf.ts  Time.ts
src/naive/: index.ts
src/plugins/: Debug.ts  FieldObserver.ts  Renderer.ts
src/preload/: Preload.scss  Preload.ts  Preload.vue
src/router/: index.ts
src/types/: Debug.d.ts  Dialog.d.ts  FieldObserver.d.ts  Message.d.ts  Noti.d.ts  Renderer.d.ts
src/views/Application/: Application.scss  Application.ts  Application.vue
src/views/Application/Children/Home/: Home.scss  Home.ts  Home.vue
src/views/Application/Children/Operate/: Operate.scss  Operate.ts  Operate.vue  (+1 more)
src/views/Empty/: Empty.scss  Empty.ts  Empty.vue
src/views/Tool/: Tool.scss  Tool.ts  Tool.vue
src/views/Tool/Children/: Suspend.scss  Suspend.ts  Suspend.vue
src/views/Tray/: Tray.scss  Tray.ts  Tray.vue
(+63 files in other folders)
