[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-set-ignore-cursor-events", "clipboard-all", "dialog-all", "window-close", "window-set-position", "window-set-always-on-top", "window-center", "window-set-size", "window-set-resizable", "window-hide", "window-create", "window-show", "window-start-dragging", "window-set-fullscreen", "window-minimize", "window-set-focus", "process-all", "global-shortcut-all", "shell-all", "protocol-all", "fs-all", "path-all", "system-tray" ] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.2"
file-serve = "0.3.0"
wallpaper = "3.2.0"
image = "0.24.8"
enigo = "0.1.3"
xcap = "0.0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
custom-protocol = ["tauri/custom-protocol"]
